<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Fireworks</string>
    <string name="default_string">Default</string>
    <string name="disabled">Disabled</string>
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="unit_ms">ms</string>
    <string name="delete">Delete</string>
    <string name="enable">Enable</string>
    <string name="delete_message">Remove selected item?</string>
    <string name="choose_app">Choose app</string>
    <string name="reset">Reset</string>
    <string name="never">Never</string>
    <string name="not_available">Not available</string>
    <string name="accent_color">Accent color (Default)</string>
    <string name="notification_color">Notification color</string>
    <string name="wallpaper_color">Wallpaper color</string>
    <string name="custom_color">Custom color</string>
    <string name="unit_seconds">seconds</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_pixels">dp</string>
    <string name="unit_hz">hz</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right" translatable="false">→</string>
    <string name="arrow_down" translatable="false">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">by default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
    <string name="themes_title">Themes</string>
    <string name="buttons_category">Buttons</string>
    <string name="qs_themes">Qs Settings</string>
    <string name="qs_battery_title">Qs Battery</string>
    <string name="sb_gestures_title">Gestures for StatusBar</string>
    <string name="qs_footer_category">Footer</string>
    <string name="ls_gestures_title">Gestures for LockScreen</string>
    <string name="lock_screen_custom_clock_face_category">Lockscreen Clock Tweaks</string>
    <string name="qs_styling">Quick Settings Styling</string>
    <string name="weather_category">Weather Settings</string>
    <string name="spoof_title">Spoofing</string>
    <string name="gestures_title">Gestures</string>
    <string name="aosp_setting_title">System settings</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="powermenu_title">Power menu</string>
    <string name="statusbar_title">Status bar</string>
    <string name="statusbar_indicators">Status bar Indicators</string>
    <string name="statusbar_items_category">Status bar items</string>
    <string name="status_bar_battery_category_title">Battery customizations</string>
    <string name="fingerprint_category">Fingerprint</string>
    <string name="animations_category">Animations</string>
    <string name="charging_category">Ls Charging configurations</string>
    <string name="notification_category">Notification Settings</string>
    <string name="screenshot_category">Screenshot Settings</string>
    <string name="status_bar_icons_category_title">StatusBar Icons</string>
    <string name="powermenu_items_title">Power menu items</string>
    <string name="monet_category">Monet Settings</string>
    <string name="pulse_category">Pulse</string>
    <string name="udfps_category">UDFPS</string>
    <string name="general_category">General</string>
    <string name="flashlight_category">Flashlight</string>
    <string name="qs_category">Qs Customizations</string>
    <string name="battery_category">Energy saving Configurations</string>
    <string name="brightness_slider_category">Brightness Slider Customizations</string>
    <string name="lockscreen_interface_category">LockScreen Interface</string>
    <string name="rgb">RGB</string>
    <string name="hsl">HSL</string>
    <string name="hsv">HSV</string>
    <string name="invalid_color">Invalid color!</string>
    <string name="hosts_block_title">Ad-block</string>
    <string name="hosts_block_summary">Block ads with a modified hosts file. Turn off to use third party solutions or if apps cause issues.</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_summary">Customize power menu options</string>
    <string name="power_menu_actions_title">Actions</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_screenshot_summary">Long-press for partial screenshot</string>
    <string name="power_menu_onthego_title">On-The-Go mode</string>
    <string name="power_menu_advanced_title">Advanced reboot options</string>
    <string name="power_menu_airplane_title">Airplane</string>
    <string name="power_menu_torch_title">Flashlight</string>
    <string name="power_menu_settings_title">Settings</string>
    <string name="power_menu_lockdown_title">Lockdown</string>
    <string name="power_menu_lockdown_unavailable">Lockdown is disabled as keyguard isn\'t secure</string>
    <string name="power_menu_soundpanel_title">Sound panel</string>
    <string name="power_menu_users_title">Users</string>
    <string name="power_menu_logout_title">Logout</string>
    <string name="power_menu_emergency_title">Emergency</string>
    <string name="power_menu_devicecontrols_title">Device controls</string>
    <string name="advanced_reboot_title">Advanced restart</string>
    <string name="advanced_reboot_summary">When unlocked, include options in the power menu for restarting into recovery or bootloader</string>
    <string name="advanced_reboot_secured_title">Secured lockscreen</string>
    <string name="advanced_reboot_secured_summary">Display advanced restart options on secured lockscreen</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Display media cover art when available</string>
    <string name="lockscreen_albumart_filter_title">Media cover art filter</string>
    <string name="lockscreen_albumart_filter_none">None</string>
    <string name="lockscreen_albumart_filter_grayscale">Grayscale</string>
    <string name="lockscreen_albumart_filter_tint">Accent tinted</string>
    <string name="lockscreen_albumart_filter_blur">Blur</string>
    <string name="lockscreen_albumart_filter_grayblur">Grayscale and blurred</string>
    <string name="artwork_media_background_enable_blur_title">Blur media media notification artwork background</string>
    <string name="artwork_media_background_blur_radius_title">Blur amount for media notification artwork</string>
    <string name="media_artwork_fade_percent_title">Fade percent for media notification artwork</string>
    <string name="lockscreen_albumart_filter_blur_radius_title">Blur amount for lockscreen media artwork</string>
    <string name="ls_media_artwork_fade_percent_title">Fade amount for lockscreen media artwork</string>
    <string name="channel_light_settings_id" translatable="false">light_settings</string>
    <string name="channel_light_settings_name">Light settings preview</string>
    <string name="edit_light_settings">Edit light settings</string>
    <string name="pulse_speed_title">Pulse length and speed</string>
    <string name="default_time">Normal</string>
    <string name="custom_time">Custom</string>
    <string name="brightness">Brightness level</string>
    <string name="pulse_length_always_on">Always on</string>
    <string name="pulse_length_very_short">Very short</string>
    <string name="pulse_length_short">Short</string>
    <string name="pulse_length_normal">Normal</string>
    <string name="pulse_length_long">Long</string>
    <string name="pulse_length_very_long">Very long</string>
    <string name="pulse_speed_very_fast">Very fast</string>
    <string name="pulse_speed_fast">Fast</string>
    <string name="pulse_speed_normal">Normal</string>
    <string name="pulse_speed_slow">Slow</string>
    <string name="pulse_speed_very_slow">Very slow</string>
    <string name="light_brightness_title">Brightness levels</string>
    <string name="light_brightness_normal">Normal</string>
    <string name="light_brightness_zen">Do Not Disturb</string>
    <string name="light_brightness_category">Light brightness settings</string>
    <string name="battery_light_title">Battery light</string>
    <string name="battery_light_enable_title">Enable battery light</string>
    <string name="battery_light_summary">Configure led color based on battery level and status</string>
    <string name="battery_low_pulse_title">Pulse if battery low</string>
    <string name="battery_light_full_charge_disabled_title">Turn off when fully charged</string>
    <string name="battery_light_list_title">Colors</string>
    <string name="battery_light_low_color_title">Battery low</string>
    <string name="battery_light_medium_color_title">Charging</string>
    <string name="battery_light_full_color_title">Nearly Charged (>90%)</string>
    <string name="battery_light_really_full_color_title">Fully Charged (100%)</string>
    <string name="battery_light_brightness_normal" translatable="false">@string/light_brightness_normal</string>
    <string name="battery_light_brightness_zen" translatable="false">@string/light_brightness_zen</string>
    <string name="notification_light_title">Notification light</string>
    <string name="notification_light_enable_title">Enable notification light</string>
    <string name="lockscreen_battery_info_title">Battery info</string>
    <string name="lockscreen_battery_info_summary">Display battery info when charging</string>
    <string name="disable_qs_title">Hide QS on secure lock screen</string>
    <string name="disable_qs_summary">Prevent access to QS tiles on secure lock screen</string>
    <string name="lockscreen_enable_power_menu_title">Power menu</string>
    <string name="lockscreen_enable_power_menu_summary">Allow accessing power menu on secure lockscreen</string>
    <string name="power_menu_styles_cat">Power Menu Customizations</string>
    <string name="power_menu_type_title">Power menu style</string>
    <string name="weather_settings_title">Weather settings</string>
    <string name="weather_settings_summary">Setup icon pack and weather service</string>
    <string name="charging_animation_title">Charging animation</string>
    <string name="charging_animation_summary">Display an animation when the device is plugged in</string>
    <string name="pulse_settings">Pulse</string>
    <string name="pulse_settings_summary">Audio graphic equalizer for navigation bar and lockscreen</string>
    <string name="lockscreen_user_switcher_title">User Switcher</string>
    <string name="lockscreen_user_switcher_summary">Show user switcher when unlocking secured device</string>
    <string name="ambient_icons_lockscreen_title">AOD icons on lockscreen</string>
    <string name="ambient_icons_lockscreen_summary">Replace notifications with AOD icons</string>
    <string name="ambient_icons_size_title">AOD icons size</string>
    <string name="ambient_icons_color_title">AOD icons color</string>
    <string name="power_menu_animation_title">Power menu animation</string>
    <string name="ambient_text_category_title">Ambient-AOD Customization</string>
    <string name="ambient_text_category_summary">Customizing the looks of ambient-aod</string>
    <string name="udfps_settings_title">UDFPS settings</string>
    <string name="udfps_settings_summary">Settings for customizing the UDFPS</string>
</resources>