<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2021 Project Spark
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/powermenu_title"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="gesture_power_menu_summary"
        android:title="@string/aosp_setting_title"
        android:fragment="com.android.settings.gestures.PowerMenuSettings"
        settings:controller="com.android.settings.gestures.PowerMenuPreferenceController" />

    <com.spark.support.preferences.SystemSettingSwitchPreference
        android:key="lockscreen_power_menu_disabled"
        android:title="@string/lockscreen_power_menu_disabled_title"
        android:summary="@string/lockscreen_power_menu_disabled_summary"
        android:defaultValue="true" />

   <PreferenceCategory
      android:title="@string/power_menu_styles_cat">

        <com.spark.support.preferences.SystemSettingIntListPreference
            android:key="power_menu_animations"
            android:title="@string/power_menu_animation_title"
            android:entries="@array/power_menu_animations_entries"
            android:entryValues="@array/power_menu_animations_values"
            android:summary="%s"
            android:defaultValue="0" />

    <com.spark.support.preferences.SecureSettingListPreference
        android:key="power_menu_type"
        android:summary="%s"
        android:title="@string/power_menu_type_title"
        android:entries="@array/power_menu_type_entries"
        android:entryValues="@array/power_menu_type_values"
        android:defaultValue="0"/>

   </PreferenceCategory>

    <PreferenceCategory
        android:key="power_menu_items"
        android:title="@string/power_menu_actions_title" >

        <com.spark.support.preferences.SecureSettingSwitchPreference
            android:key="advanced_reboot"
            android:title="@string/advanced_reboot_title"
            android:summary="@string/advanced_reboot_summary"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="screenshot"
            android:title="@string/power_menu_screenshot_title"
            android:summary="@string/power_menu_screenshot_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="onthego"
            android:title="@string/power_menu_onthego_title"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="airplane"
            android:title="@string/power_menu_airplane_title"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="users"
            android:title="@string/power_menu_users_title"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="lockdown"
            android:title="@string/power_menu_lockdown_title"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="emergency"
            android:title="@string/power_menu_emergency_title"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="restart_systemui"
            android:title="@string/power_menu_restart_systemui_title"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="devicecontrols"
            android:title="@string/power_menu_devicecontrols_title"
            android:defaultValue="false"
            android:enabled="false" />
    </PreferenceCategory>

</PreferenceScreen>
